Attempt to copy integration tests to dev directory

--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,10 @@
     "extra": {
         "map": [
             [
-                "*",
-                "Skywire/Blog"
+                [
+					"Test/Integration",
+					"dev/tests/integration/testsuite/Skywire/Blog"
+				]
             ]
         ]
     }
