Attempt to use relative path to copy files to dev

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
             [
                 [
 					"Test/Integration",
-					"dev/tests/integration/testsuite/Skywire/Blog"
+					"../../dev/tests/integration/testsuite/Skywire/Blog"
 				]
             ]
         ]
