Attempt to copy entire module to app/code

--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,8 @@
         "map": [
             [
                 [
-					"Test/Integration",
-					"../../dev/tests/integration/testsuite/Skywire/Blog"
+					"*",
+					"Skywire/Blog"
 				]
             ]
         ]
