Nesting was wrong, try again

--- a/composer.json
+++ b/composer.json
@@ -26,10 +26,8 @@
     "extra": {
         "map": [
             [
-                [
-					"*",
-					"app/code/Skywire/Blog"
-				]
+                "*",
+                "Skywire/Blog"
             ]
         ]
     }
