Let's try both app/code and dev/integration copy

--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,10 @@
             [
                 "*",
                 "Skywire/Blog"
+            ],
+            [
+                "Test/Integration",
+                "../../dev/tests/integration/testsuite/Skywire/Blog"
             ]
         ]
     }
